--- a/services.html
+++ b/services.html
@@ -28,6 +28,16 @@
     upgrade-insecure-requests" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4NQ7BSG9G5');
+</script>
+  
 <body class="page-services">
   <a class="skip-link" href="#main">Skip to content</a>
 
