--- a/index.html
+++ b/index.html
@@ -11,88 +11,79 @@
   <meta name="color-scheme" content="light dark" />
   <meta name="theme-color" content="#f5f5f5" />
   <link rel="manifest" href="./manifest.webmanifest" />
-  <link rel="icon" href="./assets/img/icon-192.png" />
-  <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    img-src 'self' data: https:;
+    style-src 'self';
+    script-src 'self' https://assets.calendly.com https://www.googletagmanager.com https://www.google-analytics.com;
+    connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com https://www.google-analytics.com https://region1.google-analytics.com;
+    frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com;
+    form-action 'self' https://formspree.io;
+    upgrade-insecure-requests
+  " />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4NQ7BSG9G5');
+  </script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-4NQ7BSG9G5');
-</script> 
-<body class="page-index">
-  <a class="skip-link" href="#main">Skip to content</a>
+<body>
+  <main class="container">
 
-  <main class="wrap" id="main">
-    <header class="header">
-      <h1 class="title">Darren Steptoe</h1>
-      <p class="sub">Artist • Author • Storyteller</p>
-    </header>
-
-    <section class="panel" aria-label="Navigation">
-      <h2 class="h2">Pages</h2>
-      <ul id="site-pages" class="links" aria-label="Site pages"></ul>
+    <section class="panel">
+      <h2>Pages</h2>
+      <ul class="link-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Media Production & Consulting</a></li>
+        <li><a href="books.html">Books</a></li>
+        <li><a href="projects.html">Projects & Research</a></li>
+        <li><a href="fantasy.html">Fantasy Football</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </section>
 
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel" aria-label="Site search">
-      <div class="searchRow">
-        <label class="srOnly" for="q">Search</label>
-        <input
-          id="q"
-          name="q"
-          type="search"
-          autocomplete="off"
-          spellcheck="false"
-          placeholder="Search the site..."
-        />
-        <button id="clear" type="button">Clear</button>
-      </div>
-
-      <div id="resultsMeta" class="resultsMeta hidden">
-        <strong><span id="count">0</span></strong> result(s)
-      </div>
-
-      <ul id="results" class="results hidden" aria-live="polite"></ul>
+    <section class="panel">
+      <h2>Search</h2>
+      <input type="text" id="searchInput" placeholder="Search..." />
     </section>
 
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel" aria-label="About">
-      <h2 class="h2">About</h2>
+    <section class="panel">
+      <h2>About</h2>
       <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
+        Darren Steptoe is a media producer, political consultant, and researcher
+        based in Illinois. His work spans documentary filmmaking, campaign strategy,
+        and historical archival research.
       </p>
     </section>
 
-    <hr class="sectionRule" aria-hidden="true">
+    <section class="panel">
+      <h2>Payment</h2>
+      <p>
+        Secure payments available via Stripe.
+      </p>
+      <a href="https://buy.stripe.com/your-link" target="_blank">Make a Payment</a>
+    </section>
 
-    <section class="panel" aria-label="Featured Image">
-      <div class="featured-image-container">
-        <img src="./assets/scoreboard.jpeg" alt="Darren Steptoe, PAVE Coalition, Senate President Don Harmon" />
+    <section class="panel">
+      <h2>Schedule</h2>
+      <div class="calendly-inline-widget"
+           data-url="https://calendly.com/me--ujg"
+           style="min-width:320px;height:700px;">
       </div>
+      <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </section>
 
-    <footer class="footer footer-center">
-      <p>© <span id="year"></span> Darren Steptoe</p>
-      <p class="footer-links">
-        <a href="./privacy.html">Privacy</a> |
-        <a href="./terms.html">Terms</a> |
-        <a href="./refund.html">Refund</a>
-      </p>
-    </footer>
   </main>
 
-  <script src="./search.js" defer></script>
-  <script src="./nav.js" defer></script>
-  <script src="./script.js" defer></script>
+  <script src="./search.js"></script>
 </body>
 </html>
