--- a/more.html
+++ b/more.html
@@ -1,3 +1,4 @@
+<!-- more.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,23 +14,24 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./assets/img/icon-192.png" />
   <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
+
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' 'unsafe-inline' https://assets.calendly.com https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com https://www.google-analytics.com https://region1.google-analytics.com https://stats.g.doubleclick.net; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4NQ7BSG9G5');
+  </script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4NQ7BSG9G5');
-</script>
-  
 <body class="page-more">
-  
+
   <a class="skip-link" href="#main">Skip to content</a>
-<main class="wrap" id="main">
+  <main class="wrap" id="main">
 
     <header class="header">
       <h1 class="title">More</h1>
@@ -42,8 +44,7 @@
       <ul id="site-pages" class="links" aria-label="Site pages"></ul>
     </section>
 
-  <hr class="sectionRule" aria-hidden="true">
-
+    <hr class="sectionRule" aria-hidden="true">
 
     <!-- Fantasy Football (single large box) -->
     <section class="panel fantasyBig" aria-label="Fantasy Football">
@@ -178,7 +179,7 @@
 
   </main>
 
-    <script src="./nav.js"></script>
+  <script src="./nav.js"></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
