--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
+        I’m Darren Steptoe. I build structured, practical work where accuracy matters, from campaign strategy and electoral modeling to media production and long-form research. This site serves as a central hub for my documentaries, books, projects, and ongoing work. If you’re here for professional services, please visit the “Services” page using the menu above.
       </p>
     </section>
 
