--- a/projects.html
+++ b/projects.html
@@ -47,9 +47,11 @@
     <section class="panel" aria-label="Documentary project 1">
       <h2 class="h2">Documentary Project #1 (In Development)</h2>
       <p>
-        I’m in the research and development phase on a documentary built around primary-source material
-        housed in a university library archive. I’m working through analysis and transcription to build
-        a clean narrative foundation before production.
+        A feature-length documentary project centered on firsthand accounts during the American Civil War. The film draws from personal diaries and primary documents to reconstruct daily life inside a city under sustained siege.
+<br /><br />
+• Status: Research & Transcription<br />
+• Format: Feature-length documentary<br />
+• Source Material: Archival diaries, correspondence, military records
       </p>
       <p>
         When complete, I plan to return my analysis and transcription back to the library that currently houses the material.
