--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="wrap" id="main">
     <header class="header">
       <h1 class="title">Darren Steptoe</h1>
-      <p class="sub">Artist • Author • Storyteller</p>
+      <p class="sub">Strategy • Systems • Story</p>
     </header>
 
     <section class="panel" aria-label="Navigation">
