--- a/services.html
+++ b/services.html
@@ -280,8 +280,8 @@
 
     <hr class="sectionRule" aria-hidden="true">
 
-    <section class="panel" aria-label="Smart Intake Form">
-      <h2 class="h2">Smart Intake Form</h2>
+    <section class="panel" aria-label="Intake Form">
+      <h2 class="h2">Intake Form</h2>
       <p class="muted small">
         Pick a project type and you’ll see the right questions — plus a rough estimate / breakdown.
       </p>
