--- a/services.html
+++ b/services.html
@@ -281,7 +281,7 @@
     <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel" aria-label="Intake Form">
-      <h2 class="h2">Intake Form</h2>
+      <h2 class="h2" id="intake">Intake Form</h2>
       <p class="muted small">
         Pick a project type and you’ll see the right questions — plus a rough estimate / breakdown.
       </p>
@@ -438,7 +438,7 @@
 
     <section class="panel" aria-label="Schedule">
       <div class="panelHeaderRow">
-        <h2 class="h2">Schedule</h2>
+          <h2 class="h2" id="schedule">Schedule</h2>
         <img src="./assets/Calendly_logo.png" alt="Calendly" class="panelLogoHorizontal" />
       </div>
 
