--- a/more.html
+++ b/more.html
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <!-- ESPN-style compact tiles -->
+        <!-- Top 3 tiles -->
         <div class="fantasyLevel">
           <div class="fantasySection fantasyPodium" aria-label="Top 3 winners">
             <div class="fantasySectionHead">
