--- a/calculator.html
+++ b/calculator.html
@@ -22,10 +22,6 @@
       box-shadow: 0 6px 18px rgba(0,0,0,0.08);
     }
 
-    h1 {
-      margin-top: 0;
-    }
-
     label {
       display: block;
       margin-top: 15px;
@@ -104,14 +100,23 @@
     <label>Contact Rate %</label>
     <input type="number" id="contactRate" />
 
+    <label>Contact Volatility %</label>
+    <input type="number" id="contactVolatility" />
+
     <label>Persuasion Conversion %</label>
     <input type="number" id="persuasionRate" />
+
+    <label>Persuasion Volatility %</label>
+    <input type="number" id="persuasionVolatility" />
 
     <label>GOTV Universe Size</label>
     <input type="number" id="gotvUniverse" />
 
     <label>GOTV Conversion %</label>
     <input type="number" id="gotvRate" />
+
+    <label>GOTV Volatility %</label>
+    <input type="number" id="gotvVolatility" />
 
     <button onclick="runCalculation()">Run Simulation</button>
 
