--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Strategy Calculator</title>
+  <title>Campaign Probability Calculator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,7 +85,7 @@
     <label>Expected Turnout %</label>
     <input type="number" id="turnoutRate" />
 
-    <label>Turnout Volatility % (std dev)</label>
+    <label>Turnout Volatility %</label>
     <input type="number" id="turnoutVolatility" />
 
     <label>Safety Buffer %</label>
