--- a/calculator.html
+++ b/calculator.html
@@ -287,7 +287,12 @@
       </div>
     </div>
 
-    <button onclick="runCalculation()">Run</button>
+    <button onclick="runCalculation()">Run Model</button>
+
+<div class="hint">
+  Tip: Start with <b>DEFAULTS.md</b>, sanity-check your setup using <b>EXAMPLES.md</b>.
+  If results feel “too stable,” increase volatility or enable Movable Share.
+</div>
 
     <div class="results" id="results"></div>
   </div>
